click pas sur plus

--- a/memento2.html
+++ b/memento2.html
@@ -12,7 +12,7 @@
                 <li><a href="CSS">CSS</a></li>
                 <li><a href="GIT">GIT</a></li>
                 <li><a href="LiensUtile">Liens utile</a></li>
-                <li><a class="active" href="about">Plus</a></li>        
+                <li><a class="active" type="button" onclick="alert('non click pas !')" href="about">Plus</a></li>      
             </ul>
             
 
