--- a/memento2.html
+++ b/memento2.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <link type="text/css" rel="stylesheet" href="memenstyle.css"/>
-        <title>Memento by Lewis</title>    
-    </head>
-        <body>
-            <h1><img id="logo" src="https://laurentportfolioblog.files.wordpress.com/2016/09/logo-html5-css3.png" alt="logo Html5 Css3">  Ce qu'il faut retenir !</h1>
-            <ul>
-                <li><a href="HTML">HTML</a></li>
-                <li><a href="CSS">CSS</a></li>
-                <li><a href="GIT">GIT</a></li>
-                <li><a href="LiensUtile">Liens utile</a></li>
-                <li><a class="active" type="button" onclick="alert('non click pas !')" href="about">Plus</a></li>      
-            </ul>
-            
 
-        </body>
+<head>
+    <meta charset="UTF-8"/>
+    <link type="text/css" rel="stylesheet" href="memenstyle.css"/>
+    <title>Memento by Lewis</title>
+</head>
+
+<body id="fond">
+    <a href="E:\ProgramData\Wamp64\www\memento\memento2.html"><img id="logo" src="C:\Users\Lewis-Ze-Rage\Desktop\imageonline-co-whitebackgroundremoved.png" alt="logo Lewis"/></a>
+    <div><img id="logo2" src="C:\Users\Lewis-Ze-Rage\Desktop\logohtmlcss.png" alt="logohtmlcss"/></div>
+    <h1>Ce qu'il faut retenir !</h1>
+    <nav>
+        <ul>
+            <li class="deroulant"><a href="#">HTML &ensp;</a>
+                <ul class="sous">
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\Basehtml.html">Les bases</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\textehtml.html">Le texte</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\attribut.html">Les attributs</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\stylehtml.html">Les styles</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\lienhtml.html">Les liens</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\imagehtml.html">Les images</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\tableauxhtml.html">Les tableaux</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\listehtml.html">Les listes</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pageshtml\formulairehtml.html">Les formulaires</a></li>
+                </ul>
+            </li>
+            <li class="deroulant"><a href="#">CSS &ensp;</a>
+                <ul class="sous">
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pagecss\basecss.html">Les bases</a></li>
+                    <li><a href="#">Les selecteurs</a></li>
+                    <li><a href="#">Le traitement de texte</a></li>
+                </ul>
+            </li>
+            <li class="deroulant"><a href="#">GIT &ensp;</a></li>
+            <li class="deroulant"><a href="#">Liens utile &ensp;</a></li>
+            <li><a href="#" class="active">Plus</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
