--- a/memento2.html
+++ b/memento2.html
@@ -9,7 +9,7 @@
 
 <body id="fond">
     <a href="E:\ProgramData\Wamp64\www\memento\memento2.html"><img id="logo" src="C:\Users\Lewis-Ze-Rage\Desktop\imageonline-co-whitebackgroundremoved.png" alt="logo Lewis"/></a>
-    <div><img id="logo2" src="C:\Users\Lewis-Ze-Rage\Desktop\logohtmlcss.png" alt="logohtmlcss"/></div>
+    <img id="logo2" src="C:\Users\Lewis-Ze-Rage\Desktop\logohtmlcss.png" alt="logohtmlcss"/>
     <h1>Ce qu'il faut retenir !</h1>
     <nav>
         <ul>
@@ -29,14 +29,15 @@
             <li class="deroulant"><a href="#">CSS &ensp;</a>
                 <ul class="sous">
                     <li><a href="E:\ProgramData\Wamp64\www\memento\pagecss\basecss.html">Les bases</a></li>
-                    <li><a href="#">Les selecteurs</a></li>
-                    <li><a href="#">Le traitement de texte</a></li>
+                    <li><a href="E:\ProgramData\Wamp64\www\memento\pagecss\selecteurcss.html">Les sélecteurs d’attributs</a></li>
+                    <li><a href="#">Propriété CSS</a></li>
                 </ul>
             </li>
             <li class="deroulant"><a href="#">GIT &ensp;</a></li>
             <li class="deroulant"><a href="#">Liens utile &ensp;</a></li>
-            <li><a href="#" class="active">Plus</a></li>
+            <li><a href="E:\ProgramData\Wamp64\www\memento\pageplus.html" class="active">Plus</a></li>
         </ul>
     </nav>
+    <img id="coding" src="C:\Users\Lewis-Ze-Rage\Desktop\devencour.png" alt="working in progres"/>
 </body>
 </html>
